--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<label>Рада New верт 700 white </label>
 			<input type="text" name="bb">
 
-			<label>Рада New верт 8000 white </label>
+			<label>Рада New верт 800 white </label>
 			<input type="text" name="bc">
 
 			<button type="button" id='ay'>Добавить</button>
@@ -63,7 +63,7 @@
 		<div class ="tab">
 
 			<div id="div1">
-	 			<label>Рада New верт 600 white </label>
+	 			<label>Рада New векепекепкерт 600 white </label>
 	 			<input type="checkbox" id="gal1">
         			<input type="text" name="aa" id="myInput1">
       			</div>
