--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class ="tab">
 
 			<div id="div1">
-	 			<label>Рада New векепекепкерт 600 white </label>
+	 			<label>Рада New верт 600 white </label>
 	 			<input type="checkbox" id="gal1">
         			<input type="text" name="aa" id="myInput1">
       			</div>
